*** empty log message ***

--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -253,7 +253,7 @@ path&gt;/../lib/ImageMagick/modules/coders/</P>
 </TABLE>
 <PRE></PRE><P>
 Download</P>
-<P CLASS="code-western"><A HREF="http://ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-win2k.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-win2k.exe</A></P>
+<P CLASS="code-western"><A HREF="http://ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-xp.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-xp.exe</A></P>
 <P>and execute it from the Windows Command Shell,  double-click from
 Windows Explorer, or just &quot;open&quot; it from your browser, to
 start the installation program.</P>
