--- a/www/archives.html
+++ b/www/archives.html
@@ -138,7 +138,7 @@ table:</P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=16%>
-				<P ALIGN=RIGHT><FONT SIZE=3>win2k</FONT></P>
+				<P ALIGN=RIGHT><FONT SIZE=3>xp</FONT></P>
 			</TD>
 			<TD WIDTH=84%>
 				<P><FONT SIZE=3>An extended source code package for use with
