--- a/www/windows.html
+++ b/www/windows.html
@@ -71,7 +71,7 @@ ActivePerl</A> prior to commencing with installation of ImageMagick.
 <P CLASS="western">Retrieve the ImageMagick Windows binary install
 package from a one of the ftp sites listed at the <A HREF="archives.html">ImageMagick
 Download Sites</A> page. The file will be named similar to
-ImageMagick-5.4.8-win2k.exe and should be found in the 'binaries'
+ImageMagick-xp.exe and should be found in the 'binaries'
 subdirectory of the ftp site. 
 </P>
 <H4 CLASS="western">Start Installation Wizard 
