--- a/www/install.html
+++ b/www/install.html
@@ -51,8 +51,8 @@ ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-5.4.8.tar.gz</a><br>
 ftp://ftp.imagemagick.org/pub/ImageMagick/binaries</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/mac">
 ftp://ftp.imagemagick.org/pub/ImageMagick/mac</a><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/win2k">
-ftp://ftp.imagemagick.org/pub/ImageMagick/win2k</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/xp">
+ftp://ftp.imagemagick.org/pub/ImageMagick/xp</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/vms">
 ftp://ftp.imagemagick.org/pub/ImageMagick/vms</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/linux">
