--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,18 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-08  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Added logging capabilities to the CORE API.  This facility is useful
+    for debugging.
+
+2002-08-07  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * ImageMagick 5.4.9 released.
+
+2002-09-06  Leonard Rosenthol &lt;leonardr@lazerware.com&gt;
+  * Fixed some bugs in the Clipboard coder
+  * Added new ImageToHBITMAP function to NTFeature.c/.h in core
+  * Added support for Quantum==32 to IMDisplay
+
 2002-08-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Fix formatting in the *.mgk files so that they are XML conformant
 
