--- a/www/convert.html
+++ b/www/convert.html
@@ -129,7 +129,8 @@ To make a thumbnail of a JPEG image, use:
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 In this example, <tt>'-size 120x120'</tt> gives a hint to the JPEG decoder
 that the image is going to be downscaled to 120x120, allowing it to run
-faster by avoiding returning a full-resolution image.  The
+faster by avoiding returning full-resolution images to ImageMagick for
+the subsequent resizing operation.  The
 <tt>'-resize 120x120'</tt> specifies the desired dimensions of the
 output image.  It will be scaled so its largest dimension is 120 pixels.  The
 <tt>'+profile "*"'</tt> removes any ICM, EXIF, IPTC, or other profiles
