--- a/www/mogrify.html
+++ b/www/mogrify.html
@@ -129,12 +129,13 @@ To convert all the TIFF files in a particular directory to JPEG, use:
 <p>
 To convert a directory full of JPEG images to thumbnails, use:
 <pre>
-    convert -size 120x120 *.jpg -resize 120x120 +profile "*"
+    mogrify -size 120x120 *.jpg -resize 120x120 +profile "*"
 </pre>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-In this example, <tt>'-i size 120x120'</tt> gives a hint to the JPEG decoder
+In this example, <tt>'-size 120x120'</tt> gives a hint to the JPEG decoder
 that the images are going to be downscaled to 120x120, allowing it to run
-faster by avoiding returning full-resolution images.  The
+faster by avoiding returning full-resolution images to ImageMagick for
+the subsequent resizing operation.  The
 <tt>'-resize 120x120'</tt> specifies the desired dimensions of the
 output images.  It will be scaled so its largest dimension is 120 pixels.  The
 <tt>'+profile "*"'</tt> removes any ICM, EXIF, IPTC, or other profiles
