--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -55,7 +55,7 @@ who prefer to build ImageMagick from source code should refer to the
 </TABLE>
 <PRE></PRE><P>
 Download the appropriate binary from
-<A HREF="ftp://@ftp.imagemagick.org/pub/ImageMagick/binaries">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries</A>
+<A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries</A>
 or a <A HREF="archives.html">mirror</A> site.</P>
 <P>The available Unixish binaries are shown in the following table:</P>
 <DL>
@@ -279,7 +279,7 @@ it, from the Command Prompt window type</P>
 <I>Note, if you are using MacOS-X (&quot;Darwin&quot;) please refer
 to the Unix installation instructions.</I></BLOCKQUOTE>
 <P>Download</P>
-<P CLASS="code-western"><A HREF="ftp://@ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit</A></P>
+<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit</A></P>
 <P>and double click on it to extract the distribution. Move to the
 ImageMagick folder and double click on the convert program icon.
 Next, type</P>
