*** empty log message ***

--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -246,14 +246,14 @@ path&gt;/../lib/ImageMagick/modules/coders/</P>
 	<TR>
 		<TD WIDTH=100% BGCOLOR="#52799e">
 			<P CLASS="western"><IMG SRC="../images/right_triangle.png" NAME="Graphic5" ALT="&gt;" ALIGN=BOTTOM WIDTH=15 HEIGHT=14 BORDER=0>
-			<B><FONT SIZE=4><FONT FACE="Helvetica, Arial"><FONT COLOR="#ffffff">Win2K,
+			<B><FONT SIZE=4><FONT FACE="Helvetica, Arial"><FONT COLOR="#ffffff">XP, Win2K,
 			WinME, NT, Win98, Win95 Install</FONT></FONT></FONT></B></P>
 		</TD>
 	</TR>
 </TABLE>
 <PRE></PRE><P>
 Download</P>
-<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-xp.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-xp.exe</A></P>
+<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-i686-pc-windows.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-i686-pc-windows.exe</A></P>
 <P>and execute it from the Windows Command Shell,  double-click from
 Windows Explorer, or just &quot;open&quot; it from your browser, to
 start the installation program.</P>
