--- a/www/windows.html
+++ b/www/windows.html
@@ -71,7 +71,7 @@ ActivePerl</A> prior to commencing with installation of ImageMagick.
 <P CLASS="western">Retrieve the ImageMagick Windows binary install
 package from a one of the ftp sites listed at the <A HREF="archives.html">ImageMagick
 Download Sites</A> page. The file will be named similar to
-ImageMagick-xp.exe and should be found in the 'binaries'
+ImageMagick-i686-pc-windows.exe and should be found in the 'binaries'
 subdirectory of the ftp site. 
 </P>
 <H4 CLASS="western">Start Installation Wizard 
@@ -85,7 +85,7 @@ to continue.
 <P CLASS="western">Specify what drive and directory to install
 ImageMagick into. Approximately 13MB of free disk space is required
 to install ImageMagick. The default installation directory is similar
-to &ldquo;C:\Program Files\ImageMagick-5.4.8-Q16&rdquo;. Once you
+to &ldquo;C:\Program Files\ImageMagick-5.5.1-Q16&rdquo;. Once you
 have entered the desired installation directory, then select &ldquo;Next&gt;&rdquo;
 to continue. 
 </P>
