*** empty log message ***

--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -279,7 +279,7 @@ it, from the Command Prompt window type</P>
 <I>Note, if you are using MacOS-X (&quot;Darwin&quot;) please refer
 to the Unix installation instructions.</I></BLOCKQUOTE>
 <P>Download</P>
-<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-mac.sit</A></P>
+<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-powerpc-apple-mac9.2.sit">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-powerpc-apple-mac9.2.sit</A></P>
 <P>and double click on it to extract the distribution. Move to the
 ImageMagick folder and double click on the convert program icon.
 Next, type</P>
