*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -1126,6 +1126,11 @@ TrueColorMatte, ColorSeparation, ColorSeparationMatte, Optimize }</td>
   <td>print detailed information about the image</td>
  </tr>
   <tr>
+ <td>virtual-pixel</td>
+  <td>{Constant, Edge, Mirror, Tile}</td>
+  <td>the virtual pixel method</td>
+ </tr>
+  <tr>
  <td>white-point</td>
   <td><i>x-value</i>, <i>y-value</i></td>
   <td>chromaticity white point (e.g. 0.3127, 0.329)</td>
