--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -7,6 +7,13 @@
 This file records noteworthy changes in Magick++.
 
 <p>
+(5.5.1)<BR>
+<UL>
+  <LI> Fixed a Color memory allocation problem which became evident when
+    using the Magick++ DLL.
+
+</UL>
+<p>
 (5.4.9)<BR>
 <UL>
   <LI> Added the Image textEncoding() method and an encoding option to
