--- a/www/mogrify.html
+++ b/www/mogrify.html
@@ -1199,7 +1199,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-threshold">-threshold</a> <i>&lt;value&gt;</i>
+    <a href="ImageMagick.html#details-threshold">-threshold</a> <i>&lt;value&gt;</i>{<i>%</i>}<i></i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>threshold the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
