*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -772,8 +772,8 @@ of a left and right image of a stereo pair</td>
  </tr>
   <tr>
  <td>Threshold</td>
-  <td>threshold=&gt;<i>integer</i></td>
-  <td>threshold the image</td>
+  <td>threshold=&gt;<i>string</i></td>
+ <td>threshold the image</td>
  </tr>
   <tr>
  <td>Transparent</td>
