*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -1763,9 +1763,15 @@ Delegate</i> is missing</td>
   <td>CacheWarning</td>
   <td>pixels could not be saved to the pixel cache</td>
  </tr>
- <td>385</td>
+  <tr>
+ <td>380</td>
   <td>XServerWarning</td>
   <td>an X resource is unavailable</td>
+ </tr>
+  <tr>
+ <td>385</td>
+  <td>MonitorWarning</td>
+  <td>there was a problem with prgress monitor</td>
  </tr>
   <tr>
  <td>390</td>
@@ -1828,9 +1834,15 @@ Delegate</i> is missing</td>
   <td>CacheError</td>
   <td>pixels could not be saved to the pixel cache</td>
  </tr>
- <td>485</td>
+  <tr>
+ <td>480</td>
   <td>XServerError</td>
   <td>an X resource is unavailable</td>
+ </tr>
+  <tr>
+ <td>480</td>
+  <td>MonitorError</td>
+  <td>there was a progress monitor error</td>
  </tr>
   <tr>
  <td>490</td>
