*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -937,7 +937,7 @@ next image in a sequence</td>
  </tr>
   <tr>
  <td>dispose</td>
-  <td><i>{0, 1, 2, 3}</i></td>
+  <td><i>{Undefined, None, Background, Previous}</i></td>
   <td>GIF disposal method</td>
  </tr>
   <tr>
