*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -925,6 +925,11 @@ more than 100mb of memory or disk and stop processing all images once the
   <td>type of image compression</td>
  </tr>
   <tr>
+ <td>debug</td>
+  <td><i>{No, Configure, Annotate, Render, Locale, Coder, X11, Cache, Blob, All}</i></td>
+  <td>display copious debugging information</td>
+ </tr>
+  <tr>
  <td>delay</td>
   <td><i>integer</i></td>
   <td>this many 1/100ths of a second\fP must expire before displaying the
