added -version option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1173,7 +1173,7 @@ be treated after being displayed.</font></td></tr></table>
 Here are the valid methods:
 </font></td></tr></table>
 <pre>
-Unsdefined      No disposal specified.
+Undefined       No disposal specified.
 None            Do not dispose between frames.
 Background      Overwrite the image area with background color
 Previous        Overwrite the image area with what was there
@@ -3635,6 +3635,17 @@ If <strong>-colors</strong> is also specified, the total unique colors in the im
 and color reduction error values are printed. Refer to <a href="quantize.html">quantize</a>
 for a description of these values.
 </font></td></tr></table>
+<table BORDER=0 WIDTH="94%">
+<tr>
+<td width="3%"><br></td> 
+<td ALIGN=LEFT BGCOLOR="#9EBAC6">
+<img SRC="../images/right_triangle_option.png"
+ALT=">" BORDER=0 height=14
+width=15><b><font face="Helvetica, Arial"
+><font color="#FFFFFF"><font size="+1">
+    <a name="details-version"></a>-version
+</font></font></font></b></td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print ImageMagick version string</td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
