*** empty log message ***

--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -25,6 +25,8 @@ ImageMagick Changes</font></font></font></b></td>
 <pre>
 2002-09-21  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added 'exception' parameter to the ImageMagick progress monitor API.
+  * Added enumerated types for the dispose member of the Image structure.
+  * Added -version option to commandline utilities.
 
 2002-09-21  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
   * The xcf decoder would sometimes create artifacts when reading RLE-encoded
